Remove force_refresh parameter from vault list api
