# swagger.yaml
@@ -20,13 +20,6 @@ schemes:
 paths:
   /vault/:
     get:
-      parameters:
-        - name: force_refresh
-          in: query
-          description: >-
-            If set to 1, this will refresh vault information from server.
-          required: false
-          type: integer
       tags:
         - vault
       summary: List all local vaults
